JS: burger - done. CSS: burger - in progress

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								</article>
 							</div>
 						</article>
-						<a class="hero__media media__container media">
+						<article class="hero__media media__container media">
 							<a href="#!" class="media__link">
 								<img src="@img/icons/icons.svg#vb-active" alt="Viber" />
 							</a>
@@ -53,10 +53,10 @@
 							<a href="#!" class="media__link">
 								<img src="@img/icons/icons.svg#inst-active" alt="Instagram" />
 							</a>
-						</a>
+						</article>
 					</div>
 				</section>
-				<section id="about" class=" about about__container">
+				<section id="about" class="about about__container">
 					<h2 class="about__title">Про нас</h2>
 					<div class="about__content">
 						<div class="about__image"></div>
@@ -80,7 +80,7 @@
 						</div>
 					</div>
 				</section>
-				<section id="services" class=" services services__container">
+				<section id="services" class="services services__container">
 					<h2 class="services__title">Послуги</h2>
 					<div class="services__content">
 						<ul class="services__list">
@@ -92,10 +92,10 @@
 									class="services__service-image"
 								/>
 								<div class="services__service-description">
-									<span class="services__service-number">#1</span
-									><span class="services__service-text"
-										>Доставимо вантажі в будь-який куток Одеської області</span
-									>
+									<span class="services__service-number">#1</span>
+									<span class="services__service-text">
+										Доставимо вантажі в будь-який куток Одеської області
+									</span>
 								</div>
 							</li>
 							<li class="services__item">
@@ -106,9 +106,9 @@
 									class="services__service-image"
 								/>
 								<div class="services__service-description">
-									<span class="services__service-number">#2</span
-									><span class="services__service-text"
-										>Завантажимо , розвантажимо будь-якої важкості вантаж
+									<span class="services__service-number">#2</span>
+									<span class="services__service-text">
+										Завантажимо , розвантажимо будь-якої важкості вантаж
 									</span>
 								</div>
 							</li>
@@ -120,10 +120,10 @@
 									class="services__service-image"
 								/>
 								<div class="services__service-description">
-									<span class="services__service-number">#3</span
-									><span class="services__service-text"
-										>Винесемо та вивеземо сміття після ремонту в вашій оселі</span
-									>
+									<span class="services__service-number">#3</span>
+									<span class="services__service-text">
+										Винесемо та вивеземо сміття після ремонту в вашій оселі
+									</span>
 								</div>
 							</li>
 							<li class="services__item">
@@ -134,16 +134,16 @@
 									class="services__service-image"
 								/>
 								<div class="services__service-description">
-									<span class="services__service-number">#4</span
-									><span class="services__service-text"
-										>Винесем , перевезем , занесем ваші речі з одієї оселі в іншу</span
-									>
+									<span class="services__service-number">#4</span>
+									<span class="services__service-text">
+										Винесем , перевезем , занесем ваші речі з одієї оселі в іншу
+									</span>
 								</div>
 							</li>
 						</ul>
 					</div>
 				</section>
-				<section id="contact" class=" contact contact__container">
+				<section id="contact" class="contact contact__container">
 					<h2 class="contact__title">Контакти</h2>
 					<div class="contact__content">
 						<article class="contact__feedback">
@@ -202,7 +202,7 @@
 						</article>
 					</div>
 				</section>
-				<section id="cars" class="  cars cars__container">
+				<section id="cars" class="cars cars__container">
 					<div class="cars__text">
 						<h2 class="cars__title">Наші Автомобілі</h2>
 						<p class="cars__description">
@@ -213,27 +213,27 @@
 						<ul class="cars__list swiper-wrapper">
 							<li class="cars__item swiper-slide">
 								<img src="@img/auto-3t-1.webp" alt="" class="cars__item-img" />
-								<p class="cars__item-text">Вантаж до 3 т.</p>
+								<h4 class="cars__item-text">Вантаж до 3 т.</h4>
 							</li>
 							<li class="cars__item swiper-slide">
 								<img src="@img/auto-3t-2.webp" alt="" class="cars__item-img" />
-								<p class="cars__item-text">Вантаж до 3 т.</p>
+								<h4 class="cars__item-text">Вантаж до 3 т.</h4>
 							</li>
 							<li class="cars__item swiper-slide">
 								<img src="@img/auto-5t-1.webp" alt="" class="cars__item-img" />
-								<p class="cars__item-text">Вантаж до 5 т.</p>
+								<h4 class="cars__item-text">Вантаж до 5 т.</h4>
 							</li>
 							<li class="cars__item swiper-slide">
 								<img src="@img/auto-5t-2.webp" alt="" class="cars__item-img" />
-								<p class="cars__item-text">Вантаж до 5 т.</p>
+								<h4 class="cars__item-text">Вантаж до 5 т.</h4>
 							</li>
 							<li class="cars__item swiper-slide">
 								<img src="@img/auto-10t-1.webp" alt="" class="cars__item-img" />
-								<p class="cars__item-text">Вантаж до 10 т. + причеп 8 т.</p>
+								<h4 class="cars__item-text">Вантаж до 10 т. + причеп 8 т.</h4>
 							</li>
 							<li class="cars__item swiper-slide">
 								<img src="@img/auto-10t-2.webp" alt="" class="cars__item-img" />
-								<p class="cars__item-text">Вантаж до 10 т. + причеп 8 т.</p>
+								<h4 class="cars__item-text">Вантаж до 10 т. + причеп 8 т.</h4>
 							</li>
 						</ul>
 						<div class="cars__buttons">
