--- a/html/header.html
+++ b/html/header.html
@@ -2,17 +2,27 @@
 	<div class="header__container">
 		<a href="#hero" class="header__logo logo">
 			<span>Avantaj</span>
-			<p>Odessa delivery</p>
+			<p>Odessa<br />delivery</p>
 		</a>
-		<nav class="header__nav">
+		<nav id="navmenu" class="header__nav">
 			<ul class="header__list">
-				<li class="header__item"><a class="header__link"href="#about">про нас</a></li>
-				<li class="header__item"><a class="header__link"href="#services">послуги</a></li>
-				<li class="header__item"><a class="header__link"href="#contact">контакти</a></li>
-				<li class="header__item"><a class="header__link"href="#cars">наші вантажівки</a></li>
+				<li class="header__item"><a class="header__link" href="#hero">головна</a></li>
+				<li class="header__item"><a class="header__link" href="#about">про нас</a></li>
+				<li class="header__item"><a class="header__link" href="#services">послуги</a></li>
+				<li class="header__item"><a class="header__link" href="#contact">контакти</a></li>
+				<li class="header__item"><a class="header__link" href="#cars">наші вантажівки</a></li>
 			</ul>
+			<p class="header__developers">
+				<!-- <span class="header__developers-text"> -->
+					Design Avantaj 2024 by <a href="#!" class="header__developer">Olena Beltiukova</a>.
+					<br />
+					Developed by <a href="#!" class="header__developer">Vitalii Yushchuk</a>.
+				<!-- </span> -->
+			</p>
 		</nav>
-    <a href="tel:+380983332211" class="header__button button1">Зателефонувати</a>
-    <button type="button" class="header__burger burger"><span></span></button>
+		<div class="header__buttons">
+			<a href="tel:+380957791211" class="header__button button1">+38 (095) 779-12-11</a>
+			<button id="burger" type="button" class="header__burger burger"><span></span></button>
+		</div>
 	</div>
 </header>
