--- a/html/header.html
+++ b/html/header.html
@@ -12,12 +12,10 @@
 				<li class="header__item"><a class="header__link" href="#contact">контакти</a></li>
 				<li class="header__item"><a class="header__link" href="#cars">наші вантажівки</a></li>
 			</ul>
-			<p class="header__developers">
-				<!-- <span class="header__developers-text"> -->
-					Design Avantaj 2024 by <a href="#!" class="header__developer">Olena Beltiukova</a>.
+			<p class="header__authors">
+					Design Avantaj 2024 by <a href="#!" class="header__author">Olena Beltiukova</a>.
 					<br />
-					Developed by <a href="#!" class="header__developer">Vitalii Yushchuk</a>.
-				<!-- </span> -->
+					Developed by <a href="#!" class="header__author">Vitalii Yushchuk</a>.
 			</p>
 		</nav>
 		<div class="header__buttons">
