--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						</article>
 					</div>
 				</section>
-				<section id="about" class="hide about about__container">
+				<section id="about" class="about about__container">
 					<h2 class="about__title">Про нас</h2>
 					<div class="about__content">
 						<div class="about__image"></div>
@@ -80,7 +80,7 @@
 						</div>
 					</div>
 				</section>
-				<section id="services" class="hide services services__container">
+				<section id="services" class="services services__container">
 					<h2 class="services__title">Послуги</h2>
 					<div class="services__content">
 						<ul class="services__list">
@@ -143,7 +143,7 @@
 						</ul>
 					</div>
 				</section>
-				<section id="contact" class="hide contact contact__container">
+				<section id="contact" class="contact contact__container">
 					<h2 class="contact__title">Контакти</h2>
 					<div class="contact__content">
 						<article class="contact__feedback">
@@ -202,7 +202,7 @@
 						</article>
 					</div>
 				</section>
-				<section id="cars" class="hide cars cars__container">
+				<section id="cars" class="cars cars__container">
 					<div class="cars__text">
 						<h2 class="cars__title">Наші Автомобілі</h2>
 						<p class="cars__description">
