Main section is now fully adapted. Footer - need to adaptate.

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,1 +1,55 @@
-<footer class="footer">footer</footer>
+<footer id="#footer" class="footer">
+	<section class="footer__container">
+		<article class="footer__content">
+			<a href="#" class="footer__logo logo">
+				<span>Avantaj</span>
+				<p>Odessa<br />delivery</p>
+			</a>
+			<ul class="footer__nav">
+				<li class="footer__item"><a class="footer__nav-link" href="#hero">Головна</a></li>
+				<li class="footer__item"><a class="footer__nav-link" href="#about">Про нас</a></li>
+				<li class="footer__item"><a class="footer__nav-link" href="#services">Послуги</a></li>
+				<li class="footer__item"><a class="footer__nav-link" href="#contact">Контакти</a></li>
+				<li class="footer__item"><a class="footer__nav-link" href="#cars">Наші вантажівки</a></li>
+			</ul>
+			<article class="footer__contact">
+				<h3 class="footer__contact-address">м. Одеса</h3>
+				<a href="tel:+380957791211" class="footer__contact-phone">Тел. +380957791211</a>
+				<a href="tel:+380972251506" class="footer__contact-phone">Тел. +380972251506</a>
+				<a href="mailto:lu4kov.vaha@gmail.com" class="footer__contact-email">
+					lu4kov.vaha@gmail.com
+				</a>
+			</article>
+			<article class="footer__schedule">
+				<h3 class="footer__schedule-text">Графік роботи</h3>
+				<p class="footer__schedule-text">Пн. - Пт. 9:00 - 20:00</p>
+				<p class="footer__schedule-text">Сб. 10:00 - 17:00</p>
+				<p class="footer__schedule-text">Нд. Вихідний</p>
+			</article>
+			<article class="footer__media">
+				<div class="footer__media-column">
+					<a href="#!" class="footer__media-link _vb">
+						<img src="@img/icons/icons.svg#vb-active" alt="Viber" />
+					</a>
+					<a href="#!" class="footer__media-link _tg">
+						<img src="@img/icons/icons.svg#tg-active" alt="Telegram" />
+					</a>
+					<a href="#!" class="footer__media-link _wu">
+						<img src="@img/icons/icons.svg#wu-active" alt="Whatsup" />
+					</a>
+				</div>
+				<div class="footer__media-column">
+					<a href="#!" class="footer__media-link _fb">
+						<img src="@img/icons/icons.svg#fb-active" alt="Facebook" />
+					</a>
+					<a href="#!" class="footer__media-link _inst">
+						<img src="@img/icons/icons.svg#inst-active" alt="Instagram" />
+					</a>
+				</div>
+			</article>
+		</article>
+		<p class="footer__authors">
+			Design Avantaj 2024 by <a href="#!" class="footer__author">Olena Beltiukova</a>. Developed by <a href="#!" class="footer__author">Vitalii Yushchuk</a>.
+		</p>
+	</section>
+</footer>
