--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<div class="wrapper">
 			@@include('html/header.html',{})
 			<main class="main">
-				<section id="hero" class="hero">
+				<section id="hero" class="hide hero">
 					<div class="hero__container">
 						<article class="hero__background">
 							<div class="hero__content">
@@ -56,7 +56,7 @@
 						</article>
 					</div>
 				</section>
-				<section id="about" class="about about__container">
+				<section id="about" class="hide about about__container">
 					<h2 class="about__title">Про нас</h2>
 					<div class="about__content">
 						<div class="about__image"></div>
@@ -80,7 +80,7 @@
 						</div>
 					</div>
 				</section>
-				<section id="services" class="services services__container">
+				<section id="services" class="hide services services__container">
 					<h2 class="services__title">Послуги</h2>
 					<div class="services__content">
 						<ul class="services__list">
@@ -99,7 +99,7 @@
 								</div>
 							</li>
 							<li class="services__item">
-								<h3 class="services__service-name">Вантажні послуги</h3>
+								<h3 class="services__service-name">Вантажні<br />послуги</h3>
 								<img
 									src="@img/services-2.webp"
 									alt="Вантажні послуги"
@@ -113,7 +113,7 @@
 								</div>
 							</li>
 							<li class="services__item">
-								<h3 class="services__service-name">Вивіз сміття</h3>
+								<h3 class="services__service-name">Вивіз<br />сміття</h3>
 								<img
 									src="@img/services-3.webp"
 									alt="Вивіз сміття"
@@ -127,7 +127,7 @@
 								</div>
 							</li>
 							<li class="services__item">
-								<h3 class="services__service-name">Допомога з переїздом</h3>
+								<h3 class="services__service-name">Допомога<br />з переїздом</h3>
 								<img
 									src="@img/services-4.webp"
 									alt="Допомога з переїздом"
@@ -143,7 +143,7 @@
 						</ul>
 					</div>
 				</section>
-				<section id="contact" class="contact contact__container">
+				<section id="contact" class="hide contact contact__container">
 					<h2 class="contact__title">Контакти</h2>
 					<div class="contact__content">
 						<article class="contact__feedback">
@@ -181,7 +181,7 @@
 								<a href="mailto:lu4kov.vaha@gmail.com" class="contacts__email"
 									>lu4kov.vaha@gmail.com
 								</a>
-								<article class="contact__media media">
+								<article class="contacts__media media">
 									<a href="#!" class="media__link">
 										<img src="@img/icons/icons.svg#vb-active" alt="Viber" />
 									</a>
@@ -242,7 +242,6 @@
 						</div>
 					</article>
 				</section>
-				<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 			</main>
 			@@include('html/footer.html',{})
 		</div>
