Footer - Done. Need to fix 'Form' section

--- a/html/footer.html
+++ b/html/footer.html
@@ -6,11 +6,11 @@
 				<p>Odessa<br />delivery</p>
 			</a>
 			<ul class="footer__nav">
-				<li class="footer__item"><a class="footer__nav-link" href="#hero">Головна</a></li>
-				<li class="footer__item"><a class="footer__nav-link" href="#about">Про нас</a></li>
-				<li class="footer__item"><a class="footer__nav-link" href="#services">Послуги</a></li>
-				<li class="footer__item"><a class="footer__nav-link" href="#contact">Контакти</a></li>
-				<li class="footer__item"><a class="footer__nav-link" href="#cars">Наші вантажівки</a></li>
+				<li class="footer__nav-item"><a class="footer__nav-link" href="#">Головна</a></li>
+				<li class="footer__nav-item"><a class="footer__nav-link" href="#about">Про нас</a></li>
+				<li class="footer__nav-item"><a class="footer__nav-link" href="#services">Послуги</a></li>
+				<li class="footer__nav-item"><a class="footer__nav-link" href="#contact">Контакти</a></li>
+				<li class="footer__nav-item"><a class="footer__nav-link" href="#cars">Наші вантажівки</a></li>
 			</ul>
 			<article class="footer__contact">
 				<h3 class="footer__contact-address">м. Одеса</h3>
@@ -49,7 +49,7 @@
 			</article>
 		</article>
 		<p class="footer__authors">
-			Design Avantaj 2024 by <a href="#!" class="footer__author">Olena Beltiukova</a>. Developed by <a href="#!" class="footer__author">Vitalii Yushchuk</a>.
+			Design Avantaj 2024 by <a href="https://www.behance.net/olenabeltiukova"  target='_blank'  class="footer__author">Olena Beltiukova</a>. Developed by <a href="#!"  target='_blank' class="footer__author">Vitalii Yushchuk</a>.
 		</p>
 	</section>
 </footer>
