--- a/html/header.html
+++ b/html/header.html
@@ -1,21 +1,21 @@
 <header class="header">
 	<div class="header__container">
-		<a href="#hero" class="header__logo logo">
+		<a href="#" class="header__logo logo">
 			<span>Avantaj</span>
 			<p>Odessa<br />delivery</p>
 		</a>
 		<nav id="navmenu" class="header__nav">
 			<ul class="header__list">
-				<li class="header__item"><a class="header__link" href="#hero">головна</a></li>
+				<li class="header__item"><a class="header__link" href="#">головна</a></li>
 				<li class="header__item"><a class="header__link" href="#about">про нас</a></li>
 				<li class="header__item"><a class="header__link" href="#services">послуги</a></li>
 				<li class="header__item"><a class="header__link" href="#contact">контакти</a></li>
 				<li class="header__item"><a class="header__link" href="#cars">наші вантажівки</a></li>
 			</ul>
 			<p class="header__authors">
-					Design Avantaj 2024 by <a href="#!" class="header__author">Olena Beltiukova</a>.
+					Design Avantaj 2024 by <a href="https://www.behance.net/olenabeltiukova" target='_blank' class="header__author">Olena Beltiukova</a>.
 					<br />
-					Developed by <a href="#!" class="header__author">Vitalii Yushchuk</a>.
+					Developed by <a href="#!"  target='_blank' class="header__author">Vitalii Yushchuk</a>.
 			</p>
 		</nav>
 		<div class="header__buttons">
