--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<div class="wrapper">
 			@@include('html/header.html',{})
 			<main class="main">
-				<section id="hero" class="hide hero">
+				<section id="hero" class="hero">
 					<div class="hero__container">
 						<article class="hero__background">
 							<div class="hero__content">
@@ -56,7 +56,7 @@
 						</article>
 					</div>
 				</section>
-				<section id="about" class="hide about about__container">
+				<section id="about" class="about about__container">
 					<h2 class="about__title">Про нас</h2>
 					<div class="about__content">
 						<div class="about__image"></div>
@@ -80,7 +80,7 @@
 						</div>
 					</div>
 				</section>
-				<section id="services" class="hide services services__container">
+				<section id="services" class="services services__container">
 					<h2 class="services__title">Послуги</h2>
 					<div class="services__content">
 						<ul class="services__list">
@@ -143,7 +143,7 @@
 						</ul>
 					</div>
 				</section>
-				<section id="contact" class="hide contact contact__container">
+				<section id="contact" class="contact contact__container">
 					<h2 class="contact__title">Контакти</h2>
 					<div class="contact__content">
 						<article class="contact__feedback">
