Update styles according to customer and designer edits

--- a/html/header.html
+++ b/html/header.html
@@ -2,7 +2,7 @@
 	<div class="header__container">
 		<a href="#" class="header__logo logo">
 			<span>Avantaj</span>
-			<p>Odessa<br />delivery</p>
+			<p>Odesa<br />delivery</p>
 		</a>
 		<nav id="navmenu" class="header__nav">
 			<ul class="header__list">
