--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 								</div>
 								<article class="hero__stats">
 									<p class="hero__stat-item">
-										<spam class="hero__stat-number">+10</spam>
+										<spam class="hero__stat-number">10+</spam>
 										<spam class="hero__stat-description">років<br />досвіду</spam>
 									</p>
 									<p class="hero__stat-item">
-										<spam class="hero__stat-number">+100</spam>
+										<spam class="hero__stat-number">500+</spam>
 										<spam class="hero__stat-description">Задоволених<br />клієнтів</spam>
 									</p>
 									<p class="hero__stat-item">
-										<spam class="hero__stat-number">+1000</spam>
+										<spam class="hero__stat-number">1000+</spam>
 										<spam class="hero__stat-description">Виконаних<br />доставок</spam>
 									</p>
 								</article>
@@ -47,12 +47,12 @@
 							<a href="#!" class="media__link">
 								<img src="@img/icons/icons.svg#wu-active" alt="Whatsup" />
 							</a>
-							<a href="#!" class="media__link">
+							<!-- <a href="#!" class="media__link">
 								<img src="@img/icons/icons.svg#fb-active" alt="Facebook" />
 							</a>
 							<a href="#!" class="media__link">
 								<img src="@img/icons/icons.svg#inst-active" alt="Instagram" />
-							</a>
+							</a> -->
 						</article>
 					</div>
 				</section>
@@ -64,11 +64,11 @@
 							<div class="about__text">
 								<p class="about__paragrahp">
 									Наша команда має багаторічний досвід в галузі доставки, забезпечуючи високий
-									рівень професіоналізму та надійності в Одеській області.
+									рівень професіоналізму та надійності в м. Одеса.
 								</p>
 								<p class="about__paragrahp">
 									Ми допоможемо вам перевезти вантаж важкістю від 3 до 18 т., завантажити та
-									розвантажити в потрібному місці по всій Одеській області.
+									розвантажити в потрібному місці по всьому м. Одеса.
 								</p>
 								<p class="about__paragrahp">
 									Ми працюєм над тим, щоб ваш вантаж був доставлений найоптимальнішим маршрутом з
@@ -94,7 +94,7 @@
 								<div class="services__service-description">
 									<span class="services__service-number">#1</span>
 									<span class="services__service-text">
-										Доставимо вантажі в будь-який куток Одеської області
+										Доставимо вантажі в будь-який куточок Одеси
 									</span>
 								</div>
 							</li>
@@ -108,7 +108,7 @@
 								<div class="services__service-description">
 									<span class="services__service-number">#2</span>
 									<span class="services__service-text">
-										Завантажимо , розвантажимо будь-якої важкості вантаж
+										Завантажимо та розвантажимо вантаж будь-якої важкості
 									</span>
 								</div>
 							</li>
@@ -136,7 +136,7 @@
 								<div class="services__service-description">
 									<span class="services__service-number">#4</span>
 									<span class="services__service-text">
-										Винесем , перевезем , занесем ваші речі з одієї оселі в іншу
+										Винесем, перевезем, занесем ваші речі з одієї оселі в іншу
 									</span>
 								</div>
 							</li>
@@ -191,12 +191,12 @@
 									<a href="#!" class="media__link">
 										<img src="@img/icons/icons.svg#wu-active" alt="Whatsup" />
 									</a>
-									<a href="#!" class="media__link">
+									<!-- <a href="#!" class="media__link">
 										<img src="@img/icons/icons.svg#fb-active" alt="Facebook" />
 									</a>
 									<a href="#!" class="media__link">
 										<img src="@img/icons/icons.svg#inst-active" alt="Instagram" />
-									</a>
+									</a> -->
 								</article>
 							</div>
 						</article>
@@ -204,7 +204,7 @@
 				</section>
 				<section id="cars" class="cars cars__container">
 					<div class="cars__text">
-						<h2 class="cars__title">Наші Автомобілі</h2>
+						<h2 class="cars__title">Наші вантажівки</h2>
 						<p class="cars__description">
 							Великий парк транспорту. Від невеликих вантажівок до великовантажних тягачів.
 						</p>
@@ -213,27 +213,27 @@
 						<ul class="cars__list swiper-wrapper">
 							<li class="cars__item swiper-slide">
 								<img src="@img/auto-3t-1.webp" alt="" class="cars__item-img" />
-								<h4 class="cars__item-text">Вантаж до 3 т.</h4>
+								<h4 class="cars__item-text">Вантаж до 3т</h4>
 							</li>
 							<li class="cars__item swiper-slide">
 								<img src="@img/auto-3t-2.webp" alt="" class="cars__item-img" />
-								<h4 class="cars__item-text">Вантаж до 3 т.</h4>
+								<h4 class="cars__item-text">Вантаж до 3т</h4>
 							</li>
 							<li class="cars__item swiper-slide">
 								<img src="@img/auto-5t-1.webp" alt="" class="cars__item-img" />
-								<h4 class="cars__item-text">Вантаж до 5 т.</h4>
+								<h4 class="cars__item-text">Вантаж до 5т</h4>
 							</li>
 							<li class="cars__item swiper-slide">
 								<img src="@img/auto-5t-2.webp" alt="" class="cars__item-img" />
-								<h4 class="cars__item-text">Вантаж до 5 т.</h4>
+								<h4 class="cars__item-text">Вантаж до 5т</h4>
 							</li>
 							<li class="cars__item swiper-slide">
 								<img src="@img/auto-10t-1.webp" alt="" class="cars__item-img" />
-								<h4 class="cars__item-text">Вантаж до 10 т. + причеп 8 т.</h4>
+								<h4 class="cars__item-text">Вантаж до 10т + причеп 8т</h4>
 							</li>
 							<li class="cars__item swiper-slide">
 								<img src="@img/auto-10t-2.webp" alt="" class="cars__item-img" />
-								<h4 class="cars__item-text">Вантаж до 10 т. + причеп 8 т.</h4>
+								<h4 class="cars__item-text">Вантаж до 10т + причеп 8т</h4>
 							</li>
 						</ul>
 						<div class="cars__buttons">
