--- a/html/footer.html
+++ b/html/footer.html
@@ -3,7 +3,7 @@
 		<article class="footer__content">
 			<a href="#" class="footer__logo logo">
 				<span>Avantaj</span>
-				<p>Odessa<br />delivery</p>
+				<p>Odesa<br />delivery</p>
 			</a>
 			<ul class="footer__nav">
 				<li class="footer__nav-item"><a class="footer__nav-link" href="#">Головна</a></li>
@@ -14,8 +14,8 @@
 			</ul>
 			<article class="footer__contact">
 				<h3 class="footer__contact-address">м. Одеса</h3>
-				<a href="tel:+380957791211" class="footer__contact-phone">Тел. +380957791211</a>
-				<a href="tel:+380972251506" class="footer__contact-phone">Тел. +380972251506</a>
+				<a href="tel:+380957791211" class="footer__contact-phone">тел. +380957791211</a>
+				<a href="tel:+380972251506" class="footer__contact-phone">тел. +380972251506</a>
 				<a href="mailto:lu4kov.vaha@gmail.com" class="footer__contact-email">
 					lu4kov.vaha@gmail.com
 				</a>
@@ -38,14 +38,14 @@
 						<img src="@img/icons/icons.svg#wu-active" alt="Whatsup" />
 					</a>
 				</div>
-				<div class="footer__media-column">
+				<!-- <div class="footer__media-column">
 					<a href="#!" class="footer__media-link _fb">
 						<img src="@img/icons/icons.svg#fb-active" alt="Facebook" />
 					</a>
 					<a href="#!" class="footer__media-link _inst">
 						<img src="@img/icons/icons.svg#inst-active" alt="Instagram" />
 					</a>
-				</div>
+				</div> -->
 			</article>
 		</article>
 		<p class="footer__authors">
