--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	@@include('html/head.html',{ "title":"Avantaj - Вантажні перевезення" })
 	<body>
 		<div class="wrapper">
-			<!-- @@include('html/header.html',{}) -->
+			@@include('html/header.html',{})
 			<main class="main">
-				<section id="hero" class="hide hero">
+				<section id="hero" class=" hero">
 					<div class="hero__container">
 						<article class="hero__background">
 							<div class="hero__content">
@@ -56,7 +56,7 @@
 						</article>
 					</div>
 				</section>
-				<section id="about" class="hide about about__container">
+				<section id="about" class=" about about__container">
 					<h2 class="about__title">Про нас</h2>
 					<div class="about__content">
 						<div class="about__image"></div>
@@ -80,7 +80,7 @@
 						</div>
 					</div>
 				</section>
-				<section id="services" class="hide services services__container">
+				<section id="services" class=" services services__container">
 					<h2 class="services__title">Послуги</h2>
 					<div class="services__content">
 						<ul class="services__list">
@@ -147,15 +147,16 @@
 					<h2 class="contact__title">Контакти</h2>
 					<div class="contact__content">
 						<article class="contact__feedback">
-							<form action="" class="contact__form form">
+							<form action="#" id="form" class="contact__form form">
 								<h4 class="form__title">Зворотній зв'язок</h4>
 								<p class="form__subtitle">Введіть свої контакти і ми Вам зателефонуємо</p>
 								<label for="inputName" class="form__label">
 									<span class="form__label-name">Ім'я</span>
 									<input
-										type="text"
+									required	
+									type="text"
 										id="inputName"
-										name="userName"
+										name="name"
 										placeholder="Ваше ім'я"
 										class="form__input"
 									/>
@@ -163,14 +164,15 @@
 								<label for="inputPhone" class="form__label">
 									<span class="form__label-name">Номер телефону</span>
 									<input
-										type="phone"
+									required
+										type="number"
 										id="inputPhone"
-										name="userName"
+										name="phone"
 										placeholder="+380..."
 										class="form__input"
 									/>
 								</label>
-								<button class="form__button button1">Відправити</button>
+								<button type='submit'class="form__button button1">Відправити</button>
 							</form>
 						</article>
 						<article class="contact__contacts contacts">
@@ -182,13 +184,13 @@
 									>lu4kov.vaha@gmail.com
 								</a>
 								<article class="contacts__media media">
-									<a href="#!" class="media__link">
+									<a href="viber://add?number=+380972251506" class="media__link">
 										<img src="@img/icons/icons.svg#vb-active" alt="Viber" />
 									</a>
-									<a href="#!" class="media__link">
+									<a href="tg://resolve?domain=1378913185" class="media__link">
 										<img src="@img/icons/icons.svg#tg-active" alt="Telegram" />
 									</a>
-									<a href="#!" class="media__link">
+									<a href="whatsapp://send?phone=+380972251506" class="media__link">
 										<img src="@img/icons/icons.svg#wu-active" alt="Whatsup" />
 									</a>
 								</article>
@@ -196,7 +198,7 @@
 						</article>
 					</div>
 				</section>
-				<section id="cars" class="hide cars cars__container">
+				<section id="cars" class=" cars cars__container">
 					<div class="cars__text">
 						<h2 class="cars__title">Наші вантажівки</h2>
 						<p class="cars__description">
@@ -237,7 +239,7 @@
 					</article>
 				</section>
 			</main>
-			<!-- @@include('html/footer.html',{}) -->
+			@@include('html/footer.html',{})
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 		<script src="js/app.min.js"></script>
