some bug fix, added validation to form. changed Form style in JS

--- a/html/footer.html
+++ b/html/footer.html
@@ -28,13 +28,13 @@
 			</article>
 			<article class="footer__media">
 				<div class="footer__media-column">
-					<a href="#!" class="footer__media-link _vb">
+					<a href="viber://add?number=+380972251506" class="footer__media-link _vb">
 						<img src="@img/icons/icons.svg#vb-active" alt="Viber" />
 					</a>
-					<a href="#!" class="footer__media-link _tg">
+					<a href="tg://resolve?domain=Vasa5690754" class="footer__media-link _tg">
 						<img src="@img/icons/icons.svg#tg-active" alt="Telegram" />
 					</a>
-					<a href="#!" class="footer__media-link _wu">
+					<a href="whatsapp://send?phone=+380972251506" class="footer__media-link _wu">
 						<img src="@img/icons/icons.svg#wu-active" alt="Whatsup" />
 					</a>
 				</div>
@@ -49,7 +49,7 @@
 			</article>
 		</article>
 		<p class="footer__authors">
-			Design Avantaj 2024 by <a href="https://www.behance.net/olenabeltiukova"  target='_blank'  class="footer__author">Olena Beltiukova</a>. Developed by <a href="#!"  target='_blank' class="footer__author">Vitalii Yushchuk</a>.
+			Design Avantaj 2024 by <a href="https://www.behance.net/olenabeltiukova"  target='_blank'  class="footer__author">Olena Beltiukova</a>. <br> Developed by <a href="#!"  target='_blank' class="footer__author">Vitalii Yushchuk</a>.
 		</p>
 	</section>
 </footer>
